--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  google_fonts: ^6.1.0
+  google_fonts: ^5.1.0 
   http: 1.2.0
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
+  lottie: ^3.1.0
 
 dev_dependencies:
   build_runner: ^2.4.8
@@ -51,8 +52,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/lotties/lottie.json
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
