--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dio: ^5.4.3+1
   flutter:
     sdk: flutter
-  google_fonts: ^5.1.0 
+  flutter_bloc: ^8.1.5
+  freezed_annotation: ^2.4.1
+  google_fonts: ^5.1.0
   http: 1.2.0
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
@@ -42,6 +45,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.5.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
